--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,6 +4,8 @@ apply plugin: 'kotlin-android'
 
 apply plugin: 'kotlin-android-extensions'
 
+apply plugin: 'kotlin-kapt'
+
 android {
     compileSdkVersion 28
     defaultConfig {
@@ -55,4 +57,25 @@ dependencies {
 
     // Gson
     implementation "com.google.code.gson:gson:2.8.5"
+
+    //  Location
+    implementation 'com.google.android.gms:play-services-location:16.0.0'
+
+    //  Recycler View
+    implementation 'androidx.recyclerview:recyclerview:1.0.0'
+
+    //  Room
+    implementation "androidx.room:room-runtime:2.1.0-alpha06"
+    kapt "androidx.room:room-compiler:2.1.0-alpha06"
+    implementation "androidx.legacy:legacy-support-v4:1.0.0"
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.0.0'
+
+    //  Glide
+    implementation 'com.github.bumptech.glide:glide:4.7.1'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.7.1'
+
+    //  Circle image view
+    implementation 'de.hdodenhof:circleimageview:3.0.0'
+
 }
