--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,9 +14,10 @@
             android:label="@string/app_name"
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
-            android:theme="@style/AppTheme"
-            android:windowSoftInputMode="adjustPan">
-        <activity android:name=".UI.MainActivity">
+            android:theme="@style/AppTheme">
+        <activity android:name=".UI.MainActivity"
+                  android:windowSoftInputMode="adjustPan"
+                    android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
